--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -16,17 +16,17 @@
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
+  weight = 20
 
 [[main]]
   name = "Publications"
   url = "#featured"
-  weight = 40
+  weight = 30
 
-[[main]]
-  name = "Tutorials"
-  url = "/tutorial/"
-  weight = 50
+#[[main]]
+#  name = "Tutorials"
+#  url = "/tutorial/"
+#  weight = 50
 
 [[main]]
   name = "Contact"
@@ -35,7 +35,7 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+ [[main]]
+    name = "CV"
+    url = "files/cv.pdf"
+    weight = 70
