Change header and links

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,15 +13,18 @@
 #  url = "#posts"
 # weight = 20
 
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 20
+#[[main]]
+ # name = "Projects"
+  #url = "#projects"
+  #weight = 20
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  #url = "#featured"
+  url = "#publications"
   weight = 30
+  
+
 
 
 #[[main]]
