--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -52,7 +52,7 @@ time_format = "3:04 PM"
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "philip.jacobson@slu.se"
 phone = "+46(0)104784174"
-address = "Skolgatan 6, 74242, Öregrund"
+address = "Skolgatan 6, 74242, Öregrund, Sweden"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
 #office_hours = """Monday 10:00 to 13:00<br>
