--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ title = "Philip Jacobson"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "baseURL"
+baseURL = "https://philipjacobson.netlify.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
